# generalized-median

./: .gitignore  README.md  pyproject.toml
generalized_median/: __init__.py  main.py
