[tool.poetry]
name = "generalized-median"
version = "0.1.0"
description = ""
authors = ["Stefan Heid <stefan.heid@upb.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
jupyter = "^1.0.0"
ipykernel = "^6.25.2"
weighted-rank-correlation = {git = "https://github.com/KIuML/weighted_rank_correlation.git"}
scipy = "^1.11.2"
scikit-learn = "^1.3.0"
pandas = "^2.1.0"
numpy = "^1.25.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
